--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
         "lint": "vue-cli-service lint"
     },
     "dependencies": {
+        "@popperjs/core": "^2.11.5",
+        "bootstrap": "^5.2.0",
         "core-js": "^3.6.5",
         "vue": "^3.0.0",
-        "bootstrap": "^5.2.0",
-        "@popperjs/core": "^2.11.5",
-        "vue-router": "4"
+        "vue-router": "^4.0.13"
     },
     "devDependencies": {
         "@vue/cli-plugin-babel": "~4.5.11",
