--- a/package.json
+++ b/package.json
@@ -35,7 +35,10 @@
         "parserOptions": {
             "parser": "babel-eslint"
         },
-        "rules": {}
+        "rules": {},
+        "globals": {
+            "kakao": false
+        }
     },
     "browserslist": [
         "> 1%",
