--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
         },
         "rules": {},
         "globals": {
-            "kakao": false
+            "kakao": true
         }
     },
     "browserslist": [
